# rag-chatbot-qdrant

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  models.py  rag.py  settings.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatWindow.jsx  UploadDocs.jsx
